# Problem-Workshop-in-Software-Engineering

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
models/: fine_tuning_stats.txt  learning_statistics.txt
src/: data_pipeline.py  eda.py  setup_data.py
src/api/: main.py
src/dataset_utils/: category_list.txt  clean_jsonl.py  copy_balanced_subset.py  filter_pip370k.py  validate_annotations.py
src/model_utils/: README.md  alert_logic.py  baseline_model.py  fine_tuning.py  inference_engine.py  inference_results.json  model_settings.json  model_training.py
tests/: test_data.py  test_eda.py  test_inference.py  test_model.py  test_pipeline.py
