[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "gdown>=5.2.1",
    "ijson>=3.5.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "pycollector[all]>=0.4.6",
    "pytz>=2026.1.post1",
    "requests>=2.32.5",
    "scikit-learn>=1.5.0",
    "scipy>=1.13.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "uvicorn>=0.41.0",
    "vipy[all]>=1.16.3",
]
